--- a/deneme1.html
+++ b/deneme1.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Medkitapai - Deneme 1</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Medkitapai - Deneme 1</h1>
+    </header>
+
+    <div class="container">
+        <h2>Deneme 1 - Sorular</h2>
+        <div class="question-list">
+            <!-- Soruları listeleyen JavaScript ile 1'den 50'ye kadar sorular eklenecek -->
+        </div>
+    </div>
+
+    <!-- Modal Pencere -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span id="close" class="close">&times;</span>
+            <p id="review-text">Bu soruyu yanlış yaptıysanız, ilgili konuları tekrar ediniz!</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
