--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medkitapai - Deneme Sınavları</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Test Soruları</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Medkitapai Deneme Sınavları</h1>
-    </header>
-
     <div class="container">
-        <h2>Deneme Sınavları</h2>
-        <ul class="exam-list">
-            <li><a href="deneme1.html">Deneme 1</a></li>
-            <li><a href="deneme2.html">Deneme 2</a></li>
-            <li><a href="deneme3.html">Deneme 3</a></li>
-            <!-- Diğer denemeler için bağlantılar eklenebilir -->
-        </ul>
+        <h1>Test Soruları</h1>
+        <div class="questions">
+            <!-- 1'den 80'e kadar soru numaraları -->
+            <div class="question-list">
+                <!-- JavaScript ile doldurulacak -->
+            </div>
+        </div>
     </div>
+    <div id="popup" class="popup">
+        <span class="close-btn" onclick="closePopup()">&times;</span>
+        <p id="popup-content"></p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
